--- a/index.html
+++ b/index.html
@@ -185,11 +185,6 @@
                 >
               </li>
             </ul>
-            <!-- <ul class="nav ml-auto">
-              <li class="nav-item">
-                <button class="btn btn-fab btn-theme no-shadow">En</button>
-              </li>
-            </ul> -->
           </div>
         </div>
       </div>
@@ -212,14 +207,14 @@
         <div class="row">
           <div class="col-lg-4 py-3">
             <div class="img-place wow fadeInUp">
-              <img src="/assets/img/person.jpg" alt="" />
+              <img src="person.jpg" alt="" />
             </div>
           </div>
           <div class="col-lg-6 offset-lg-1 wow fadeInRight">
             <h1 class="fw-light">Tobi</h1>
             <h5 class="fg-theme mb-3">Data Analyst & Tech Entushiast</h5>
             <p class="text-muted" style="text-align: justify;">
-              A final year of informatics student with a big interest in the digital and technology field. Passionate about working with data, adaptable, and always motivated to improve and learn something new, critical, and creative. Successfully participated in the Independent Data Analysts Study with the Anak Bangsa Bisa Foundation and GoTo at the Kampus Merdeka batch 3
+              A final year of informatics student with a big interest in the digital and technology field. Passionate about working with data, adaptable, and always motivated to improve and learn something new, critical, and creative
             </p>
             <ul class="theme-list">
               <li><b>Lives In:</b> Karawang, West Java, Indonesia</li>
