fix navbar and ui-bcs page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             ><span class="ti-linkedin"></span
           ></a>
         </div>
-         <!-- facebook -->
+        <!-- facebook -->
         <div class="d-block">
           <a
             href="http://github.com/tobiadnan"
@@ -181,7 +181,7 @@
               <li><b>Lives In:</b> Karawang, West Java, Indonesia</li>
               <li><b>Gender:</b> Male</li>
             </ul>
-            <a href="tobi-cv.pdf">
+            <a href="/content/tobi-cv.pdf">
               <button class="btn btn-theme-outline">Download CV</button>
             </a>
           </div>
@@ -385,7 +385,7 @@
               class="img-place"
               data-src="/assets/img/work/ui-bcs.png" 
               data-fancybox
-              data-caption="<h5 class='fg-theme'><a href='/content/uiux.html'>BCS UI Design</a></h5> <p>Inventory, Stocks</p>"
+              data-caption="<h5 class='fg-theme'><a href='/content/uiux-bcs.html'>BCS UI Design</a></h5> <p>Inventory, Stocks</p>"
             >
               <img src="/assets/img/work/ui-bcs.png" alt="" />
               <div class="img-caption">
