--- a/content/uiux-bcs.html
+++ b/content/uiux-bcs.html
@@ -126,10 +126,10 @@
         </div>
         <select class="custom-select d-block my-2" id="change-page">
           <option value="">Choose Page</option>
-          <option value="index">Topbar</option>
-          <option value="blog-topbar">Blog (Topbar)</option>
+          <option value="index">Home</option>
+          <option value="blog">Blog</option>
           <!-- <option value="index-2">Minibar</option> -->
-          <option value="blog-minibar">Blog (Minibar)</option>
+          <option value="portfolio">Portfolio</option>
         </select>
       </div>
     </div>
