add card for monbi portofolio web

--- a/index.html
+++ b/index.html
@@ -396,6 +396,23 @@
           </div>
           <!-- end of analytics -->
 
+          <!-- analytics -->
+          <div class="grid-item web wow zoomIn">
+            <div
+              class="img-place"
+              data-src="/assets/img/work/monbi.png" 
+              data-fancybox
+              data-caption="<h5 class='fg-theme'><a href='/content/monbi.html'>Monbi Tracing System</a></h5> <p>Tracing, Expenses</p>"
+            >
+              <img src="/assets/img/work/monbi.png" alt="" />
+              <div class="img-caption">
+                <h5 class="fg-theme">Monbi Tracing System</h5>
+                <p>Tracing, Expenses</p>
+              </div>
+            </div>
+          </div>
+          <!-- end of analytics -->
+
           <!-- web -->
           <!-- end of web -->
 
