add gigih portfolio

--- a/index.html
+++ b/index.html
@@ -368,18 +368,18 @@
           <button class="btn btn-theme-outline" data-filter=".analytic">
             Analytic
           </button>
-          <button class="btn btn-theme-outline" data-filter=".web">
-            Web
-          </button>
           <button class="btn btn-theme-outline" data-filter=".ui-ux">
             UI/UX
+          </button>
+          <button class="btn btn-theme-outline" data-filter=".web">
+            Web
           </button>
         </div>
         <!-- end of button -->
 
         <!-- card content -->
         <div class="gridder my-3">
-          <!-- analytics -->
+          <!-- ui ux -->
           <div class="grid-item ui-ux wow zoomIn">
             <div
               class="img-place"
@@ -394,9 +394,26 @@
               </div>
             </div>
           </div>
-          <!-- end of analytics -->
+          <!-- end of ui ux -->
 
           <!-- analytics -->
+          <div class="grid-item analytic wow zoomIn">
+            <div
+              class="img-place"
+              data-src="/assets/img/work/gigih.png" 
+              data-fancybox
+              data-caption="<h5 class='fg-theme'><a href='/content/gigih.html'>Tingkat Melek Huruf & Literasi Membaca | Indonesia 2021</a></h5> <p>Analysis, Literacy Index</p>"
+            >
+              <img src="/assets/img/work/gigih.png" alt="" />
+              <div class="img-caption">
+                <h5 class="fg-theme">Tingkat Melek Huruf & Literasi Membaca | Indonesia 2021</h5>
+                <p>Analysis, Literacy Index</p>
+              </div>
+            </div>
+          </div>
+          <!-- end of analytics -->
+          
+          <!-- web -->
           <div class="grid-item web wow zoomIn">
             <div
               class="img-place"
@@ -411,18 +428,12 @@
               </div>
             </div>
           </div>
-          <!-- end of analytics -->
-
-          <!-- web -->
           <!-- end of web -->
-
-          <!-- ui ux -->
-          <!-- end of ui ux -->
         </div>
         <!-- end of card content -->
         <!-- End gridder -->
         <div class="text-center wow fadeInUp">
-          <a href="javascript:void(0)" class="btn btn-theme">Load More</a>
+          <a href="portfolio.html" class="btn btn-theme">Load More</a>
         </div>
       </div>
     </div>
