--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
           <option value="">Choose Page</option>
           <option value="index">Home</option>
           <option value="blog">Blog</option>
-          <!-- <option value="index-2">Minibar</option> -->
           <option value="portfolio">Portfolio</option>
         </select>
       </div>
@@ -104,7 +103,7 @@
     <div
       class="vg-page page-home"
       id="home"
-      style="background-image: url(/assets/img/bg_image_1.jpg)"
+      style="background-image: url(/assets/img/sampul.jpg)"
     >
       <!-- Navbar -->
       <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
@@ -135,11 +134,6 @@
                   >Portfolio</a
                 >
               </li>
-              <!-- <li class="nav-item">
-                <a href="#blog" class="nav-link" data-animate="scrolling"
-                  >Blog</a
-                >
-              </li> -->
               <li class="nav-item">
                 <a href="#contact" class="nav-link" data-animate="scrolling"
                   >Contact</a
@@ -175,7 +169,7 @@
             <h1 class="fw-light">Tobi</h1>
             <h5 class="fg-theme mb-3">Data Analyst & Tech Entushiast</h5>
             <p class="text-muted" style="text-align: justify;">
-              A final year of informatics student with a big interest in the digital and technology field. Passionate about working with data, adaptable, and always motivated to improve and learn something new, critical, and creative
+              Final year of informatics student interested in the digital and technology field. Passionate about working with data. Adaptable, always motivated to learn something new, and critical with good attention to detail.
             </p>
             <ul class="theme-list">
               <li><b>Lives In:</b> Karawang, West Java, Indonesia</li>
@@ -408,6 +402,21 @@
               <div class="img-caption">
                 <h5 class="fg-theme">Tingkat Melek Huruf & Literasi Membaca | Indonesia 2021</h5>
                 <p>Analysis, Literacy Index</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid-item analytic wow zoomIn">
+            <div
+              class="img-place"
+              data-src="/assets/img/work/covid.png" 
+              data-fancybox
+              data-caption="<h5 class='fg-theme'><a href='/content/covid-binar.html'>Covid-19 Disease Dashboard | Indonesia 2022</a></h5> <p>Analysis, Literacy Index</p>"
+            >
+              <img src="/assets/img/work/covid.png" alt="" />
+              <div class="img-caption">
+                <h5 class="fg-theme">Covid-19 Disease Dashboard | Indonesia 2022</h5>
+                <p>Analysis, Covid-19</p>
               </div>
             </div>
           </div>
