--- a/index.html
+++ b/index.html
@@ -379,12 +379,12 @@
               class="img-place"
               data-src="/assets/img/work/ui-bcs.png" 
               data-fancybox
-              data-caption="<h5 class='fg-theme'><a href='/content/uiux-bcs.html'>BCS UI Design</a></h5> <p>Inventory, Stocks</p>"
+              data-caption="<h5 class='fg-theme'><a href='/content/uiux-bcs.html' target='_blank'>BCS UI Design</a></h5> <p>Inventory, Stocks</p>"
             >
               <img src="/assets/img/work/ui-bcs.png" alt="" />
               <div class="img-caption">
                 <h5 class="fg-theme">BCS UI Design</h5>
-                <p>Inventory, Stocks</p>
+                <p>Inventory, Stocks, Figma</p>
               </div>
             </div>
           </div>
@@ -394,14 +394,30 @@
           <div class="grid-item analytic wow zoomIn">
             <div
               class="img-place"
+              data-src="/assets/img/work/tableau-marketing_superstore.png" 
+              data-fancybox
+              data-caption='<h5 class="fg-theme"><a href="https://public.tableau.com/shared/THNJF7BGT?:display_count=n&:origin=viz_share_link" target="_blank"></div>Marketing Dashboard (Superstore)</h5>
+                <p>Analysis, Marketing, Tableau</p>'
+            >
+              <img src="/assets/img/work/tableau-marketing_superstore.png" alt="" />
+              <div class="img-caption">
+                <h5 class="fg-theme">Marketing Dashboard (Superstore)</h5>
+                <p>Analysis, Marketing, Tableau</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid-item analytic wow zoomIn">
+            <div
+              class="img-place"
               data-src="/assets/img/work/gigih.png" 
               data-fancybox
-              data-caption="<h5 class='fg-theme'><a href='/content/gigih.html'>Tingkat Melek Huruf & Literasi Membaca | Indonesia 2021</a></h5> <p>Analysis, Literacy Index</p>"
+              data-caption="<h5 class='fg-theme'><a href='/content/gigih.html' target='_blank'>Tingkat Melek Huruf & Literasi Membaca | Indonesia 2021</a></h5> <p>Analysis, Literacy Index</p>"
             >
               <img src="/assets/img/work/gigih.png" alt="" />
               <div class="img-caption">
                 <h5 class="fg-theme">Tingkat Melek Huruf & Literasi Membaca | Indonesia 2021</h5>
-                <p>Analysis, Literacy Index</p>
+                <p>Analysis, Literacy Index, Looker Studio</p>
               </div>
             </div>
           </div>
@@ -411,12 +427,12 @@
               class="img-place"
               data-src="/assets/img/work/covid.png" 
               data-fancybox
-              data-caption="<h5 class='fg-theme'><a href='/content/covid-binar.html'>Covid-19 Disease Dashboard | Indonesia 2022</a></h5> <p>Analysis, Literacy Index</p>"
+              data-caption="<h5 class='fg-theme'><a href='/content/covid-binar.html' target='_blank'>Covid-19 Disease Dashboard | Indonesia 2022</a></h5> <p>Analysis, Literacy Index</p>"
             >
               <img src="/assets/img/work/covid.png" alt="" />
               <div class="img-caption">
                 <h5 class="fg-theme">Covid-19 Disease Dashboard | Indonesia 2022</h5>
-                <p>Analysis, Covid-19</p>
+                <p>Analysis, Covid-19, Looker Studio</p>
               </div>
             </div>
           </div>
@@ -428,12 +444,12 @@
               class="img-place"
               data-src="/assets/img/work/monbi.png" 
               data-fancybox
-              data-caption="<h5 class='fg-theme'><a href='/content/monbi.html'>Monbi Tracing System</a></h5> <p>Tracing, Expenses</p>"
+              data-caption="<h5 class='fg-theme'><a href='/content/monbi.html' target='_blank'>Monbi Tracing System</a></h5> <p>Tracing, Expenses</p>"
             >
               <img src="/assets/img/work/monbi.png" alt="" />
               <div class="img-caption">
                 <h5 class="fg-theme">Monbi Tracing System</h5>
-                <p>Tracing, Expenses</p>
+                <p>Tracing, Expenses, Laravel</p>
               </div>
             </div>
           </div>
