menambahkan credit-card dashboard

--- a/index.html
+++ b/index.html
@@ -425,6 +425,21 @@
           <div class="grid-item analytic wow zoomIn">
             <div
               class="img-place"
+              data-src="/assets/img/work/credit.png" 
+              data-fancybox
+              data-caption="<h5 class='fg-theme'><a href='https://lookerstudio.google.com/reporting/cd1f7024-5ac4-48a4-9878-70ee8587a15f' target='_blank'>Credit Card Portfolio Dashboard</a></h5> <p>Analytic Dasboard, Fraud Analytic, Looker Studio</p>"
+            >
+              <img src="/assets/img/work/credit.png" alt="" />
+              <div class="img-caption">
+                <h5 class="fg-theme">Credit Card Portfolio Dashboard</h5>
+                <p>Analytic Dasboard, Fraud Analytic, Looker Studio</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid-item analytic wow zoomIn">
+            <div
+              class="img-place"
               data-src="/assets/img/work/covid.png" 
               data-fancybox
               data-caption="<h5 class='fg-theme'><a href='/content/covid-binar.html' target='_blank'>Covid-19 Disease Dashboard | Indonesia 2022</a></h5> <p>Analysis, Literacy Index</p>"
