update experiance and cv

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h1 class="fw-light">Tobi</h1>
             <h5 class="fg-theme mb-3">Data Analyst & Tech Entushiast</h5>
             <p class="text-muted" style="text-align: justify;">
-              Final year of informatics student interested in the digital and technology field. Passionate about working with data. Adaptable, always motivated to learn something new, and critical with good attention to detail.
+              As a fresh graduate in Informatics, I have a strong interest in the digital and technology field, particularly in working with data. I am adaptable, always motivated to learn and pay great attention to detail. Let's collaborate 😊
             </p>
             <ul class="theme-list">
               <li><b>Lives In:</b> Karawang, West Java, Indonesia</li>
@@ -191,10 +191,10 @@
               <li>
                 <div class="title">2019 - 2023</div>
                 <div class="details">
-                  <h5>Bachelor of Technology (B.Tech.) - Teknik Informatika </h5>
+                  <h5>Bachelor of Computer Science - Informatics </h5>
                   <small class="fg-theme">STMIK Rosma</small>
                   <p>
-                    •	Cumulative GPA: 3.65 of 4.0<br>
+                    •	Cumulative GPA: 3.67 of 4.0<br>
                     •	Relevant Coursework: Data Science (Udemy), UI/UX (Udemy), Data Science Bootcamp (Binar Academy)
                   </p>
                   
@@ -208,6 +208,20 @@
                 <div class="title">2023</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
+                    <h5>Data Engineer</h5>
+                    <small>Jun - Aug 2023</small>
+                  </div>
+                  <small class="fg-theme">IYKRA</small>
+                  <p>
+                    •	Designed and implemented data pipelines (batch and streaming) into a data warehouse using Kafka, Airflow, and ETL tools <br>
+                    •	Developed an interactive dashboard for the Bank Marketing project, providing visualizations and insights for effective data analysis and decision-making
+                  </p>
+                </div>
+              </li>
+              <li>
+                <div class="title">2023</div>
+                <div class="details">
+                  <div class="d-flex justify-content-between">
                     <h5>Website Developer Intern</h5>
                     <small>Feb - May 2023</small>
                   </div>
@@ -216,7 +230,6 @@
                     •	Design and develop an application system to automate the tracing of employee expenses <br>
                     •	Work with several Units in several divisions <br>
                     •	Analysis of data requirements and functional system requirements by conducting interviews with related clients
-
                   </p>
                 </div>
               </li>
@@ -224,7 +237,7 @@
                 <div class="title">2022</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5>UI Designer Intern</h5>
+                    <h5>System Analyst</h5>
                     <small>Aug - Dec 2022</small>
                   </div>
                   <small class="fg-theme">PT. Bridgestone Tire Indonesia</small>
@@ -232,7 +245,6 @@
                     •	Assigned to the design user interface with Figma and also conduct its usability test <br>
                     •	Analyze system requirements to develop an inventory website by conducting interviews with users and related parties <br>
                     •	Made a database schema as well as use cases and activity diagrams
-
                   </p>
                 </div>
               </li>
@@ -243,13 +255,12 @@
                     <h5>Data Analyst Intern</h5>
                     <small>Feb - Jul 2022</small>
                   </div>
-                  <small class="fg-theme">Generasi Gigih 2.0 | Yayasan Anak Bangsa Bisa & GoTo</small>
+                  <small class="fg-theme">Generasi Gigih 2.0 | GoTo Impact Foundation</small>
                   
                   <p>
                     •	For three months of technical classes on Data Analyst. How to perform data cleaning, data transformation, and data reformation to create data visualizations to provide insight or business solutions <br>
                     •	Collaborated with peers on a capstone project for a case study on reading literacy inequality in Indonesia <br>
                     •	Made a dashboard visualization for the final project with Google Data Studio
-
                   </p>
                 </div>
               </li>
@@ -259,27 +270,42 @@
       </div>
     </div>
     <!-- end of experience and study -->
-
     <!-- additional -->
     <div class="container py-5">
       <h1 class="text-center fw-normal wow fadeIn">Additional</h1>
       <div class="row py-3">
-        <div class="col-md-6">
+        <div class="col-md-4">
           <div class="px-lg-3">
             <h4 class="wow fadeInUp">Technical Skills</h4>
               <ul class="theme-list">
-                <li>Python</li>
-                <li>SQL</li>
-                <li>Data Analytics</li>
+                <li>Python Programming</li>
+                <li>Google Cloud Platform</li>
+                <li>Google BigQuery</li>
+                <li>Relational database / SQL</li>
                 <li>Data Visualize</li>
-                <li>Tableau, Google Data Studio</li>
+                <li>Tableau, Power BI, Looker Studio/Google Data Studio</li>
                 <li>Adobe Illustrator, Figma</li>
                 <li>Laravel Web Framework</li>
-                <li>Object Oriented Concept</li>
               </ul>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
+          <div class="px-lg-3">
+            <h4 class="wow fadeInUp">Soft Skills</h4>
+              <ul class="theme-list">
+                <li>Machine Learning</li>
+                <li>Data Visualization</li>
+                <li>Data Analytics</li>
+                <li>A/B Testing</li>
+                <li>Multivariate Analysis</li>
+                <li>Critical Thinking</li>
+                <li>Leadership</li>
+                <li>Presentation Skill</li>
+                <li>Attention To detail</li>
+              </ul>
+          </div>
+        </div>
+        <div class="col-md-4">
           <div class="px-lg-3">
             <h4 class="wow fadeInUp">Certificate & Training</h4>
               <ul class="theme-list">
