--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
       <div class="caption-header text-center wow zoomInDown">
         <h5 class="fw-normal">Welcome</h5>
         <h1 class="fw-light mb-4">I'm <b class="fg-theme">Tobi</b></h1>
-        <div class="badge">Data Analyst & Tech Entushiast</div>
+
+        <p>
+          <a href="https://github.com/tobiadnan/"><img class="fg-theme" src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&pause=500&center=true&vCenter=true&width=435&color=fff&lines=Data+Analyst;Business+Analyst;System+Analyst;UI%2FUX+Designer;Tech+%26+Data+Enthusiast" alt="Typing SVG" /></a>
+        </p>
+        <!-- <div class="badge">Data Analyst & Tech Entushiast</div> -->
       </div>
       <!-- End Caption header -->
 
