--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <h1 class="fw-light mb-4">I'm <b class="fg-theme">Tobi</b></h1>
 
         <p>
-          <a href="https://github.com/tobiadnan/"><img class="fg-theme" src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&pause=500&center=true&vCenter=true&width=435&color=fff&lines=Data+Analyst;Business+Analyst;System+Analyst;UI%2FUX+Designer;Tech+%26+Data+Enthusiast" alt="Typing SVG" /></a>
+          <a href="/"><img class="fg-theme"  src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&duration=2500&pause=500&color=F7F7F7&center=true&vCenter=true&width=435&lines=Data+Analyst;System+Analyst;Web+Developer;Freshgraduate" alt="Typing SVG"/></a>
         </p>
         <!-- <div class="badge">Data Analyst & Tech Entushiast</div> -->
       </div>
@@ -173,13 +173,13 @@
             <h1 class="fw-light">Tobi</h1>
             <h5 class="fg-theme mb-3">Data Analyst & Tech Entushiast</h5>
             <p class="text-muted" style="text-align: justify;">
-              As a fresh graduate in Informatics, I have a strong interest in the digital and technology field, particularly in working with data. I am adaptable, always motivated to learn and pay great attention to detail. Let's collaborate 😊
+              As a fresh informatics graduate, I have a strong interest in the digital and technology field, particularly in working with data. I am adaptable, always motivated to learn and pay great attention to detail. I am so excited to contribute my skills and knowledge to a dynamic organization in the digital, technology or any other industrial sectors. <br> <br> 💥Let's collaborate and make a real impact !! 🤓
             </p>
             <ul class="theme-list">
               <li><b>Lives In:</b> Karawang, West Java, Indonesia</li>
               <li><b>Gender:</b> Male</li>
             </ul>
-            <a href="/content/tobi-cv.pdf">
+            <a href="/content/CV-Tobi.pdf">
               <button class="btn btn-theme-outline">Download CV</button>
             </a>
           </div>
@@ -212,7 +212,7 @@
                 <div class="title">2023</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5>Data Engineer</h5>
+                    <h5>Data Engineer Apprenticeship</h5>
                     <small>Jun - Aug 2023</small>
                   </div>
                   <small class="fg-theme">IYKRA</small>
@@ -241,7 +241,7 @@
                 <div class="title">2022</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5>System Analyst</h5>
+                    <h5>System Analyst Intern</h5>
                     <small>Aug - Dec 2022</small>
                   </div>
                   <small class="fg-theme">PT. Bridgestone Tire Indonesia</small>
@@ -256,7 +256,7 @@
                 <div class="title">2022</div>
                 <div class="details">
                   <div class="d-flex justify-content-between">
-                    <h5>Data Analyst Intern</h5>
+                    <h5>Data Analyst Apprenticeship</h5>
                     <small>Feb - Jul 2022</small>
                   </div>
                   <small class="fg-theme">Generasi Gigih 2.0 | GoTo Impact Foundation</small>
