--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <h1 class="fw-light mb-4">I'm <b class="fg-theme">Tobi</b></h1>
 
         <p>
-          <a href="/"><img class="fg-theme"  src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&duration=2500&pause=500&color=F7F7F7&center=true&vCenter=true&width=435&lines=Data+Analyst;System+Analyst;Web+Developer;Freshgraduate" alt="Typing SVG"/></a>
+          <a href="/"><img class="fg-theme"  src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&duration=2500&pause=500&color=F7F7F7&center=true&vCenter=true&width=435&lines=Freshgraduate;Tech+Entushiast;Data+Analyst;System+Analyst;Web+Developer" alt="Typing SVG"/></a>
         </p>
         <!-- <div class="badge">Data Analyst & Tech Entushiast</div> -->
       </div>
