--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div
       class="vg-page page-home"
       id="home"
-      style="background-image: url(/assets/img/sampul.jpg)"
+      style="background-image: url(/assets/img/cover.jpg)"
     >
       <!-- Navbar -->
       <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
@@ -159,15 +159,17 @@
       <!-- End Navbar -->
 
       <!-- Caption header -->
-      <div class="caption-header text-center wow zoomInDown">
-        <h5 style="font-size: 30px;" class="fw-normal">Welcome</h5>
-        <h1 style="font-size: 110px;" class="fw-light mb-4">I'm <b class="fg-theme">Tobi</b></h1>
-
-        <p>
-          <img class="fg-theme"  src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&duration=2500&pause=500&color=F7F7F7&center=true&vCenter=true&width=435&lines=Freshgraduate;Tech+Entushiast;Data+Analyst;System+Analyst;Web+Developer" alt="Typing SVG"/>
-        </p>
-        <!-- <div class="badge">Data Analyst & Tech Entushiast</div> -->
-      </div>
+      <!-- <div class="container justify-content-center"> -->
+        <div class="caption-header text-center wow zoomInDown">
+          <h5 style="font-size: 30px;" class="fw-normal">Welcome</h5>
+          <h1 style="font-size: 110px;" class="fw-light mb-4">I'm <b class="fg-theme">Tobi</b></h1>
+  
+          <p>
+            <img class="fg-theme"  src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&duration=2500&pause=500&color=F7F7F7&center=true&vCenter=true&width=435&lines=Freshgraduate;Tech+Entushiast;Data+Analyst;System+Analyst;Web+Developer" alt="Typing SVG"/>
+          </p>
+          <!-- <div class="badge">Data Analyst & Tech Entushiast</div> -->
+        </div>
+      <!-- </div> -->
       <!-- End Caption header -->
 
       <div class="floating-button"><span class="ti-mouse"></span></div>
@@ -179,7 +181,7 @@
         <div class="row">
           <div class="col-lg-4 py-3">
             <div class="img-place wow fadeInUp">
-              <img src="person.jpg" alt="" />
+              <img src="person1.png" alt="Profile Picture" title="Toby's Picture"/>
             </div>
           </div>
           <div class="col-lg-6 offset-lg-1 wow fadeInRight">
@@ -352,7 +354,7 @@
         <div class="col-md-4">
           <div class="px-lg-3">
             <details>
-               <summary>🌱 Looking forward to learning:</summary>
+              <summary>🌱 Looking forward to learning:</summary>
               <br>
               <code><a href="https://flutter.dev/" target="_blank"><img class="zoom m-1" height="40" src="https://www.vectorlogo.zone/logos/flutterio/flutterio-icon.svg" alt="Flutter" title="Flutter"></a></code>
 
