--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -518,9 +517,9 @@
               class="img-place"
               data-src="/assets/img/work/covid.png" 
               data-fancybox
-              data-caption="<h5 class='fg-theme'><a href='/content/covid-binar.html' target='_blank'>Covid-19 Disease Dashboard | Indonesia 2022</a></h5> <p>Analysis, Literacy Index</p>"
+              data-caption="<h5 class='fg-theme'><a href='https://medium.com/@tobyadnan/covid-19-disease-dashboard-indonesia-2022-a28f723f7802' target='_blank'>Covid-19 Disease Dashboard | Indonesia 2022</a></h5> <p>Analysis, Literacy Index</p>"
             >
-              <img src="/assets/img/work/covid.png" alt="" />
+              <img src="/assets/img/work/covid.png" alt="Covid-19 Disease Dashboard | Indonesia 2022" />
               <div class="img-caption">
                 <h5 class="fg-theme">Covid-19 Disease Dashboard | Indonesia 2022</h5>
                 <p>Analysis, Covid-19, Looker Studio</p>
@@ -1142,7 +1141,7 @@
             </p>
           </div>
           <div class="modal-footer d-flex justify-content-between">
-            <a href="#" role="button" class="btn btn-theme btn-sm">go to project</a>
+            <a href="https://medium.com/@tobyadnan/covid-19-disease-dashboard-indonesia-2022-a28f723f7802" target="_blank" rel="noopener noreferrer" role="button" class="btn btn-theme btn-sm">go to project</a>
             <button type="button" class="btn fg-theme" data-dismiss="modal">Oke</button>
           </div>
         </div>
