--- a/portfolio.html
+++ b/portfolio.html
@@ -1,43 +1,437 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>404 HTML Template by Colorlib</title>
-
-    <!-- Google font -->
+    <title>Tobi's Page | Portfolio</title>
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link
-      href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700"
       rel="stylesheet"
+      type="text/css"
+      href="/assets/css/themify-icons.css"
+    />
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/assets/vendor/animate/animate.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/assets/vendor/owl-carousel/owl.carousel.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/assets/vendor/perfect-scrollbar/css/perfect-scrollbar.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/assets/vendor/nice-select/css/nice-select.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/assets/vendor/fancybox/css/jquery.fancybox.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="/assets/css/virtual.css" />
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../assets/css/minibar.virtual.css"
     />
 
-    <!-- Custom stlylesheet -->
-    <link type="text/css" rel="stylesheet" href="/assets/css/notfound.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="/assets/css/topbar.virtual.css"
+    />
+    <style>
+        .portfolio-item {
+            transition: transform 0.2s;
+        }
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        .portfolio-item:hover {
+            transform: scale(1.1);
+        }
+    </style>
   </head>
 
-  <body>
-    <div id="notfound">
-      <div class="notfound">
-        <div class="notfound-404">
-          <h1>4<span>0</span>4</h1>
+  <body class="theme-red">
+    <!-- Back to top button -->
+    <div class="btn-back_to_top">
+      <span class="ti-arrow-up"></span>
+    </div>
+
+    <!-- Setting button -->
+    <div class="config">
+      <div class="template-config">
+        <!-- linkedin -->
+        <div class="d-block">
+          <a
+            href="http://linkedin.com/in/tobyadnan/"
+            class="btn btn-fab btn-sm"
+            title="Linkedin"
+            data-toggle="tooltip"
+            data-placement="left"
+            ><span class="ti-linkedin"></span
+          ></a>
         </div>
-        <p>
-          The page you are looking for might have been removed had its name
-          changed or is temporarily unavailable or is being developed.
-        </p>
-        <a href="/">home page</a>
+        <!-- facebook -->
+        <div class="d-block">
+          <a
+            href="http://github.com/tobiadnan"
+            class="btn btn-fab btn-sm"
+            title="Github"
+            data-toggle="tooltip"
+            data-placement="left"
+            ><span class="ti-github"></span
+          ></a>
+        </div>
+        <!-- facebook -->
+        <div class="d-block">
+          <a
+            href="http://instagram.com/tobyadnan"
+            class="btn btn-fab btn-sm"
+            title="Instagram"
+            data-toggle="tooltip"
+            data-placement="left"
+            ><span class="ti-instagram"></span
+          ></a>
+        </div>
+        <!-- Settings -->
+        <div class="d-block">
+          <button class="btn btn-fab btn-sm" id="sideel" title="Settings">
+            <span class="ti-settings"></span>
+          </button>
+        </div>
+        <!-- end Setting button -->
+      </div>
+      <div class="set-menu">
+        <p>Select Color</p>
+        <div class="color-bar" data-toggle="selected">
+          <span
+            class="color-item bg-theme-red selected"
+            data-class="theme-red"
+          ></span>
+          <span class="color-item bg-theme-blue" data-class="theme-blue"></span>
+          <span
+            class="color-item bg-theme-green"
+            data-class="theme-green"
+          ></span>
+          <span
+            class="color-item bg-theme-orange"
+            data-class="theme-orange"
+          ></span>
+          <span
+            class="color-item bg-theme-purple"
+            data-class="theme-purple"
+          ></span>
+        </div>
+        <select class="custom-select d-block my-2" id="change-page">
+          <option value="">Choose Page</option>
+          <option value="index">Home</option>
+          <option value="blog">Blog</option>
+          <!-- <option value="index-2">Minibar</option> -->
+          <option value="portfolio">Portfolio</option>
+        </select>
       </div>
     </div>
+
+    <div class="minibar">
+      <div class="header">
+        <div class="brand"></div>
+      </div>
+      <div class="content">
+        <ul class="main-menu">
+          <li class="menu-item">
+            <a href="/" class="menu-link">
+              <span class="icon ti-home"></span>
+              <span class="caption">Home</span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a href="/#about" class="menu-link">
+              <span class="icon ti-user"></span>
+              <span class="caption">About</span>
+            </a>
+          </li>
+          <li class="menu-item active">
+            <a class="menu-link">
+              <span class="icon ti-briefcase"></span>
+              <span class="caption">Portfolio</span>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a href="/#contact" class="menu-link">
+              <span class="icon ti-location-pin"></span>
+              <span class="caption">Contact</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- End Navbar -->
+
+    <!-- Content -->
+    <div class="vg-page page-portfolio" id="portfolio">
+      <div class="container">
+        <div class="text-center wow fadeInUp">
+          <div class="badge badge-subhead">Portfolio</div>
+        </div>
+        <h1 class="text-center fw-normal wow fadeInUp">What have I made?</h1>
+
+        <!-- button -->
+        <div class="filterable-button py-3 wow fadeInUp" data-toggle="selected">
+          <button class="btn btn-theme-outline selected" data-filter="*">
+            All
+          </button>
+          <button class="btn btn-theme-outline" data-filter=".analytic">
+            Analytic
+          </button>
+          <button class="btn btn-theme-outline" data-filter=".ui-ux">
+            UI/UX
+          </button>
+          <button class="btn btn-theme-outline" data-filter=".web">
+            Web
+          </button>
+        </div>
+        <!-- end of button -->
+
+        <!-- card content -->
+        <div class="gridder my-3">
+          <!-- ui ux -->
+          <!-- end of ui ux -->
+
+          <!-- analytics -->
+          <!-- Binar -->
+          <div class="grid-item analytic wow zoomIn">       
+            <div class="mb-5">
+                <div class="portfolio-item card">
+                    <img src="/assets/img/work/covid.png" alt="Covid-19 Disease Dashboard | Indonesia 2022" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title fg-theme">Covid-19 Disease Dashboard | Indonesia 2022</h5>
+                        <p class="card-text text-justify">As a participant in the Binar Academy data science bootcamp, I recognize the importance of conducting a thorough data analysis related to Covid-19 in Indonesia. By doing so, I hope...</p>
+                        <a href='https://medium.com/@tobyadnan/covid-19-disease-dashboard-indonesia-2022-a28f723f7802' target='_blank' class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <!-- end of binar -->
+          <!-- goto -->
+          <div class="grid-item analytic wow zoomIn">       
+            <div class="mb-5">
+                <div class="portfolio-item card">
+                    <img src="/assets/img/work/gigih.png" alt="Tingkat Melek Huruf & Literasi Membaca | Indonesia 2021" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title fg-theme">Indonesia’s 2021 Literacy Levels and Reading Habits</h5>
+                        <p class="card-text text-justify">“Why, despite the growing interest in reading, does the literacy rate remain low and rank poorly according to PISA?” Through this research, we aim to identify the factors that contribute to...</p>
+                        <a href='https://medium.com/@tobyadnan/indonesias-2021-literacy-levels-and-reading-habits-366dab8b8370' target='_blank' class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <!-- end of goto -->
+          <!-- iykra -->
+          <div class="grid-item analytic wow zoomIn">       
+            <div class="mb-5">
+                <div class="portfolio-item card">
+                    <img src="/assets/img/work/credit.png" alt="Credit Card Portfolio Dashboard" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title fg-theme">Credit Card Portfolio Dashboard</h5>
+                        <p class="card-text text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos voluptatem, quo repudiandae similique, natus officia adipisci iste amet architecto qui reiciendis veritatis? Ratione perspiciatis</p>
+                        <a href='#' target='_blank' class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <!-- end of iykra -->
+          <!-- end of analytics -->
+          
+          <!-- web -->
+   
+          <!-- end of web -->
+        </div>
+        <!-- end of card content -->
+        <!-- End gridder -->
+        
+      </div>
+    <!-- .... -->
+     <!-- <div class="container mt-5">
+        <h1 class="text-center mb-5">Daftar Portofolio</h1>
+
+        <div class="row">
+            <div class="col-md-4 mb-5">
+                <div class="portfolio-item card">
+                    <img src="https://source.unsplash.com/150x150/?nature" alt="Portofolio 1" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Portofolio 1</h5>
+                        <p class="card-text">Deskripsi singkat tentang Portofolio 1.</p>
+                        <a href="portfolio1.html" class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-5">
+                <div class="portfolio-item card">
+                    <img src="https://source.unsplash.com/150x150/?technology" alt="Portofolio 2" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Portofolio 2</h5>
+                        <p class="card-text">Deskripsi singkat tentang Portofolio 2.</p>
+                        <a href="portfolio2.html" class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-5">
+                <div class="portfolio-item card">
+                    <img src="https://source.unsplash.com/150x150/?art" alt="Portofolio 3" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Portofolio 3</h5>
+                        <p class="card-text">Deskripsi singkat tentang Portofolio 3.</p>
+                        <a href="portfolio3.html" class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-5">
+                <div class="portfolio-item card">
+                    <img src="https://source.unsplash.com/150x150/?design" alt="Portofolio 4" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Portofolio 4</h5>
+                        <p class="card-text">Deskripsi singkat tentang Portofolio 4.</p>
+                        <a href="portfolio4.html" class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-5">
+                <div class="portfolio-item card">
+                    <img src="https://source.unsplash.com/150x150/?travel" alt="Portofolio 5" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Portofolio 5</h5>
+                        <p class="card-text">Deskripsi singkat tentang Portofolio 5.</p>
+                        <a href="portfolio5.html" class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-5">
+                <div class="portfolio-item card">
+                    <img src="https://source.unsplash.com/150x150/?food" alt="Portofolio 6" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Portofolio 6</h5>
+                        <p class="card-text">Deskripsi singkat tentang Portofolio 6.</p>
+                        <a href="portfolio6.html" class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-5">
+                <div class="portfolio-item card">
+                    <img src="https://source.unsplash.com/150x150/?music" alt="Portofolio 7" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Portofolio 7</h5>
+                        <p class="card-text">Deskripsi singkat tentang Portofolio 7.</p>
+                        <a href="portfolio7.html" class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-5">
+                <div class="portfolio-item card">
+                    <img src="https://source.unsplash.com/150x150/?architecture" alt="Portofolio 8" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Portofolio 8</h5>
+                        <p class="card-text">Deskripsi singkat tentang Portofolio 8.</p>
+                        <a href="portfolio8.html" class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-5">
+                <div class="portfolio-item card">
+                    <img src="https://source.unsplash.com/150x150/?sports" alt="Portofolio 9" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Portofolio 9</h5>
+                        <p class="card-text">Deskripsi singkat tentang Portofolio 9.</p>
+                        <a href="portfolio9.html" class="fg-theme">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <!-- End Content -->
+    <!-- Footer -->
+    <div class="vg-footer">
+      <!-- <h1 class="text-center"></h1> -->
+      <div class="container">
+        <div class="row d-flex justify-content-around">
+          <div class="col-md-6 py-3">
+            <div class="footer-info">
+              <p>Where to find me</p>
+              <hr class="divider" />
+              <p class="fs-large fg-white">
+                Kutawaluya, Karawang - West Java 41358 Indonesia
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 py-3">
+            <div class="float-lg-right">
+              <p>Contact me</p>
+              <hr class="divider" />
+              <ul class="list-unstyled">
+                <li>thobisaha@gmail.com</li>
+                <li>+62857-7293-6084</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center mt-3">
+          <div class="col-12">
+            <p class="text-center mb-0 mt-4">
+              Copyright &copy;2023. All right reserved | Inspired template by
+              MacodeId
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End footer -->
+
+    <script src="/assets/js/jquery-3.5.1.min.js"></script>
+
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+
+    <script src="/assets/vendor/owl-carousel/owl.carousel.min.js"></script>
+
+    <script src="/assets/vendor/perfect-scrollbar/js/perfect-scrollbar.js"></script>
+
+    <script src="/assets/vendor/isotope/isotope.pkgd.min.js"></script>
+
+    <script src="/assets/vendor/nice-select/js/jquery.nice-select.min.js"></script>
+
+    <script src="/assets/vendor/fancybox/js/jquery.fancybox.min.js"></script>
+
+    <script src="/assets/vendor/wow/wow.min.js"></script>
+
+    <script src="/assets/vendor/animateNumber/jquery.animateNumber.min.js"></script>
+
+    <script src="/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+
+    <script src="/assets/js/google-maps.js"></script>
+
+    <script src="../assets/js/minibar-virtual.js"></script>
+
+    <script
+      async
+      defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"
+    ></script>
   </body>
-  <!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
